# mi-proportional-representation

./: .gitignore  README.md  cs_analysis.ipynb  pyproject.toml
plots/: README.md
raw_data/: detroit_crosswalk.csv  plural.csv  saved_legislatures.pkl  saved_legislatures_todays_map.pkl  saved_legislatures_updated_fit.pkl  smd_1000_more_dem.pkl  smd_1000_more_gop.pkl  smd_1000_no_change.pkl
raw_data/2024GEN/: 2024city.txt  2024name.txt  2024offc.txt  county.txt  mi_2024.shx  readme.txt
raw_data/2024_Voting_Precincts/: 2024_Voting_Precincts.dbf  2024_Voting_Precincts.shx  2024_Voting_Precincts.xml
raw_data/legislator_data/: shor_mccarty_agg.dta
src/: constants.py  data_loading.py  plotting.py  random_districts.py  redistricting.py  scenarios.py  utils.py
